Update version to 1.0.3 and refactor result list access in AbstractRawDataTableContainerGenerator